--- a/Javascript_sandbox/index.html
+++ b/Javascript_sandbox/index.html
@@ -14,6 +14,7 @@
     <script src="temperateLiterals.js"></script>
     <script src="arrays.js"></script>
     <script src="objectLiterals.js"></script>
+    <script src="switches.js"></script>
    
 </body>
 </html>
