--- a/Javascript_sandbox/index.html
+++ b/Javascript_sandbox/index.html
@@ -15,6 +15,11 @@
     <script src="arrays.js"></script>
     <script src="objectLiterals.js"></script>
     <script src="switches.js"></script>
+    <script src="ifElse.js"></script>
+    <script src="logicalOperators.js"></script>
+    <script src="FUNctions.js"></script>
+    <script src="loops.js"></script>
+    
    
 </body>
 </html>
